# peace-tool-pool

./: .env.example  .envrc  .gitignore  README.md  opencode.json  pyproject.toml
docs/source-manifests/gem_global_active_faults/: default.json
docs/source-manifests/usgs_fdsn_events/: default.json
examples/: 01_process_map.py  02_georeference_map.py  03_knowledge_overlay_on_map.py  README.md
scripts/: download_usgs_examples.sh  install_knowledge_assets.sh  install_layout_models.sh  install_peace_ultralytics.sh
src/peace_tool_pool/: __init__.py
src/peace_tool_pool/examples/: __init__.py  maps.py
src/peace_tool_pool/georef/: __init__.py  crs.py  errors.py  transform.py
src/peace_tool_pool/knowledge/: __init__.py  bounds.py  cache.py  config.py  errors.py  service.py  types.py  visualization.py
src/peace_tool_pool/knowledge/providers/: __init__.py  base.py  earthengine.py  earthquakes.py  faults.py  minerals.py  rock.py  semantic_k2.py
src/peace_tool_pool/knowledge/sources/: __init__.py  diss_faults.py  gem_faults.py  manifest.py  ogs_minerals.py  registry.py  sigeom_minerals.py  sync.py  usgs_events.py
src/peace_tool_pool/map_processing/: __init__.py  batch.py  cache.py  config.py  errors.py  image_ops.py  legend.py  service.py  types.py
src/peace_tool_pool/map_processing/detectors/: __init__.py  base.py  peace_yolov10.py
src/peace_tool_pool/mcp/: __init__.py  adapter.py  errors.py  images.py  resources.py  schemas.py  server.py
tests/: test_examples_maps.py  test_georef_crs.py  test_georef_transform.py  test_knowledge_assets_script.py  test_knowledge_earthengine.py  test_knowledge_minerals.py  test_knowledge_providers.py  test_knowledge_query_map.py  test_knowledge_semantic.py  test_knowledge_service.py  test_knowledge_sources.py  test_knowledge_types.py  test_knowledge_visualization.py  test_map_processing_detector.py  test_map_processing_image_ops.py  test_map_processing_legend.py  test_map_processing_service.py  test_map_processing_types.py  test_mcp_resources.py  test_mcp_schemas.py  test_mcp_server.py  test_mcp_tools_knowledge.py  test_mcp_tools_process_image.py
tests/fixtures/knowledge/: active_faults.geojson  earthquakes.csv  earthquakes_minimal.csv  k2_rock_age.json  k2_rock_type.json
