[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peace-tool-pool"
version = "0.0.0"
description = "Portable extraction scaffold for the PEACE GeoMap-Agent tool pool."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = []

[project.optional-dependencies]
detectors = [
    "huggingface-hub>=0.24,<1",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.2",
    "pillow==11.0.0",
    "psutil==6.0.0",
    "pyyaml>=6,<7",
    "requests>=2,<3",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "tqdm==4.66.5",
]
knowledge-earthengine = [
    "earthengine-api>=1,<2",
]
knowledge-local = [
    "pandas==2.2.2",
    "shapely>=2,<3",
]
knowledge-network = [
    "httpx>=0.27,<1",
]
knowledge-semantic = [
    "sentence-transformers>=3,<6",
    # transformers>=4.56 (pulled by sentence-transformers>=5) needs torch>=2.1 for
    # torch.compiler. Detectors pins torch==2.0.1 for the validated YOLO pipeline, so
    # these two extras are declared conflicting under [tool.uv] to allow divergent torch.
    "torch>=2.2,<3",
]
geo = [
    "numpy==1.26.4",
    "pyproj>=3.4,<4",
]
mcp = [
    "mcp>=1.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/peace_tool_pool"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
package = true
default-groups = []

# The detectors (YOLO) stack is pinned to torch==2.0.1, while knowledge-semantic
# needs torch>=2.1. They cannot share a single resolved torch, so they are declared
# mutually exclusive: install at most one of these extras in a given environment.
conflicts = [
    [
        { extra = "detectors" },
        { extra = "knowledge-semantic" },
    ],
]
